@@ -22,6 +22,8 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 */
 
+#define _POSIX_C_SOURCE 199309L /* for nanosleep */
+
 #include "afile.h"
 #include "config.h"
 #include <stdio.h>
